ext/x264/gstx264enc.h
@@ -51,6 +51,7 @@ struct _GstX264Enc
   x264_t *x264enc;
   x264_param_t x264param;
   gint current_byte_stream;
+  GstClockTime dts_offset;
 
   /* List of frame/buffer mapping structs for
    * pending frames */
